src/test/resources/examples/failing/ios-press-04.t
https://content.iospress.com/articles/fundamenta-informaticae/fi105-3-06

math/italics in title?
@article{Valmari:2010:simple:10.3233/FI-2010-369,
  author = {Valmari, Antti},
  title = {Simple Bisimilarity Minimization in $O$(m log n) Time},
  journal = {Fundamenta Informaticae},
  volume = {105},
  number = {3},
  pages = {319--339},
  month = jan,
  year = {2010},
  publisher = {IOS Press},
  issn = {0169-2968 (Print) 1875-8681 (Online)},
  doi = {10.3233/FI-2010-369},
  bib_scrape_url = {https://content.iospress.com/articles/fundamenta-informaticae/fi105-3-06},
  abstract = {A new algorithm for bisimilarity minimization of labelled directed graphs is presented. Its time consumption is O(m log n), where n is the number of states and m is the number of transitions. Unlike earlier algorithms, it meets this bound even if the number of different labels of transitions is not fixed. It is based on refining a partition of states with respect to the labelled transitions. A splitter is a pair consisting of a label and a set in the partition. A transition belongs to a splitter, if and only if it has the same label and its end state is in the set. Earlier algorithms consume lots of time in scanning splitters that have no transitions. The new algorithm avoids this by maintaining also a partition of transitions. To facilitate this, a refinable partition data structure with amortized constant time operations is used. Detailed pseudocode of all nontrivial details is presented. Novel simplifications are applied that both reduce the practical memory consumption and shorten the program code.},
}
